--- a/templates/index.html
+++ b/templates/index.html
@@ -55,10 +55,10 @@ document.addEventListener("DOMContentLoaded", () => {
 
         <label>Plantilla</label>
         <select name="plantilla" required>
-            <option value="1">Plantilla 1</option>
-            <option value="2">Plantilla 2</option>
-            <option value="3">Plantilla 3</option>
-            <option value="4">Plantilla 4</option>
+            <option value="1">Plantilla-DTA</option>
+            <option value="2">Plantilla-EUROPASS</option>
+            <option value="3">Plantilla-Testeo</option>
+            <option value="4">Plantilla-Basica</option>
         </select>
 
         <button type="submit" id="submitBtn">
