--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,15 @@ document.addEventListener("DOMContentLoaded", () => {
         <select name="plantilla" required>
             <option value="1">Plantilla-DTA</option>
             <option value="2">Plantilla-EUROPASS</option>
-            <option value="3">Plantilla-Testeo</option>
-            <option value="4">Plantilla-Basica</option>
+            <option value="3">Plantilla-IBM</option>
+            <!--<option value="4">Plantilla-NNT</option>
+            <option value="5">Plantilla-NNTS</option>-->
+            <option value="6">Plantilla-INETUM</option>
+           <!-- <option value="7">Plantilla-RICOH</option>-->
+            <option value="8">Plantilla-SAPIENS</option>
+            <!-- <option value="9">Plantilla-ACCENTURE</option>-->
+            <option value="10">Plantilla-Testeo</option>
+            <option value="11">Plantilla-Basica</option> 
         </select>
 
         <button type="submit" id="submitBtn">
