--- a/static/style.css
+++ b/static/style.css
@@ -111,3 +111,20 @@ button:hover {
     font-size: 14px;
     opacity: 0.9;
 }
+
+.close-btn {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border: none;
+    background: transparent;
+    font-size: 18px;
+    cursor: pointer;
+    color: #ffffff;
+}
+
+.close-btn:hover {
+    transform: translateY(-2px);;
+    color: rgb(255, 0, 0);
+    box-shadow: 0 8px 20px rgba(255, 152, 26, 0);
+}
